# 2048-Game

./: Makefile  README.md  a2.cabal  cabal.project  cabal.project.freeze
app/cli/: Main.hs
app/gui/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.4/: a2-0.1.0.0-inplace.conf  package.cache
src/A2/: Board.hs  Bot.hs  Game.hs  Grid4x4.hs  Quadruple.hs
test/: Main.hs
