cabal-version:      3.0
name:               a2
version:            0.1.0.0
license:            NONE
build-type:         Simple

common ghc-options
    ghc-options: -Wall -fdefer-typed-holes -threaded -j4

library
    import: ghc-options
    exposed-modules:
        A2.Board,
        A2.Bot,
        A2.Game,
        A2.Grid4x4,
        A2.Quadruple
    build-depends:
        random ^>=1.3.1,
        base ^>=4.19.2.0,
        mtl ^>= 2.3.0
    hs-source-dirs: src
    default-language: Haskell2010

test-suite solution-test
    import: ghc-options
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        random ^>=1.3.1,
        base ^>=4.19.2.0,
        tasty >= 1.5,
        tasty-hunit >= 0.10,
        a2

executable cli
    import: ghc-options
    default-language: Haskell2010
    hs-source-dirs: app/cli
    main-is: Main.hs
    build-depends:
        base ^>=4.19.2.0,
        random ^>=1.3.1,
        a2,
        vty == 6.5,
        vty-crossplatform == 0.5.0.0

executable gui
    import: ghc-options
    default-language: Haskell2010
    hs-source-dirs: app/gui
    main-is: Main.hs
    build-depends:
        base ^>=4.19.2.0,
        random ^>=1.3.1,
        a2,
        brillo >= 1.13.0

